# rust_graph_visualiser

./: .editorconfig  .gitignore  Cargo.toml  README.md  big.txt  medium.txt  rustfmt.toml  small.txt
docs/: index.html
src/: config.rs  graph.rs  main.rs  ui.rs  utils.rs
src/icons/: big.rs  medium.rs  small.rs
src/tests/: graph.rs  graph_tests.rs  utils.rs  utils_tests.rs
tests/: utils_tests.rs
