[package]
name = "rust_graph_visualiser"
version = "1.9.5"
edition = "2021"
authors = ["Sandra"]
repository = "https://github.com/an-Iceberg/rust_graph_visualiser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
egui-macroquad = "0.15.0"
image = "0.24.7"
macroquad = "0.3.26"
rand = "0.8.5"
